--- a/.md
+++ b/.md
@@ -1,13 +1,13 @@
 # Train a model → Save it → Create API (Flask/FastAPI) → Host on AWS (EC2) with Docker
 
- STEP 1: Train & Save Your ML Model in Google Colab >>  Download the model file
+# STEP 1: Train & Save Your ML Model in Google Colab >>  Download the model file
 
-Setep 2: Create a Flask API in VS Code
+# Setep 2: Create a Flask API in VS Code
 
 
-''' # Create a Virtual Environment
+''' ## Create a Virtual Environment
 
-## Why Use Virtual Env in VS Code?
+###  Why Use Virtual Env in VS Code?
 | Benefit                     | Why it Matters                                                          |
 | --------------------------- | ----------------------------------------------------------------------- |
 | 🔒 Isolation                | Keeps your project’s libraries separate from system/global Python       |
@@ -17,13 +17,70 @@ Setep 2: Create a Flask API in VS Code
 
 python -m venv venv
 
-# Activate venv 
+### Activate venv 
 venv\Scripts\activate
 
-# Install  
-
-
+### Install requirements
 pip install -r requirements.txt
 
-# Test Your Flask API Locally
-python app.py'''
+### Test Your Flask API Locally
+python app.py
+
+----------
+
+### Check if Docker Desktop is Installed
+### Start Docker Desktop >> Open Docker Desktop
+### Switch to Docker Linux Engine (if needed)
+
+## Step 3: Run Docker Container Locally
+''' bash
+if __name__ == "__main__":
+    app.run(host="0.0.0.0", port=5000, debug=True)
+    #  Don't write app.run(app, ...) — that’s wrong. Just use app.run(...). 
+'''
+In your VS Code terminal:
+
+'''bash
+docker build -t iris-api .
+'''
+
+## 4 Built Docker image:  >>  Showing in your ( Docker Desktop) >> (image) 
+
+---
+
+## ✅ Steps to Delete Docker Image Safely
+
+### 🔍 1. **List All Containers (Including Stopped Ones)**
+```bash
+docker ps -a
+```
+### 🛑 2. **Stop Running Containers (Optional if Already Stopped)**
+```bash
+docker stop <container_id>
+```
+### 🗑️ 3. **Remove All Containers Using That Image**
+```bash
+docker rm <container_id>
+```
+### ❌ 4. **Delete the Docker Image**
+```bash
+docker rmi iris-api
+```
+### 🛠️ 5. **Force Delete (Only If Necessary)**
+If the image still doesn't delete:
+```bash
+docker rmi -f iris-api
+```
+## 🔁 Full Flow Example:
+```bash
+docker ps -a                     # Step 1: List all containers
+docker stop <container_id>      # Step 2: Stop container (if running)
+docker rm <container_id>        # Step 3: Remove container
+docker rmi iris-api             # Step 4: Delete image
+```
+
+
+
+
+
+
