--- a/.md
+++ b/.md
@@ -15,10 +15,10 @@
 | ✅ Required for Docker later | You can export `requirements.txt` from it for Docker                    |
 | 🔁 Reproducible             | Easy to share project with others — they can recreate exact environment |
 
-python -m venv venv
+'''bash python -m venv venv '''
 
 ### Activate venv 
-venv\Scripts\activate
+'''bash venv\Scripts\activate '''
 
 ### Install requirements
 pip install -r requirements.txt
