--- a/.md
+++ b/.md
@@ -15,26 +15,20 @@
 | ✅ Required for Docker later | You can export `requirements.txt` from it for Docker                    |
 | 🔁 Reproducible             | Easy to share project with others — they can recreate exact environment |
 
-'''bash
 python -m venv venv
-'''
-
 
 ### Activate venv 
-'''bash
- venv\Scripts\activate 
-'''
 
+ venv\Scripts\activate 
+ 
 ### Install requirements
-''' bash
+
 pip install -r requirements.txt
-'''
+
 
 ### Test Your Flask API Locally
-''' bash
-python app.py
-'''
 
+python app.py
 
 ----------
 
@@ -54,7 +48,7 @@ In your VS Code terminal:
 docker build -t iris-api .
 '''
 
-## 4 Built Docker image:  >>  Showing in your ( Docker Desktop) >> (image) 
+## step 4: Built Docker image:  >>  Showing in your ( Docker Desktop) >> (image) 
 
 ---
 
@@ -89,6 +83,22 @@ docker rm <container_id>        # Step 3: Remove container
 docker rmi iris-api             # Step 4: Delete image
 ```
 
+------------
+
+# After Built Docker image:
+## Step 5: Run Docker Container Locally
+Run the Docker container and expose a port (e.g., 5000):
+''' bash
+docker run -d -p 5000:5000 iris-api
+'''
+
+''' vbnet
+# Example: 
+This command:
+-d: runs in detached mode (in the background)
+-p 5000:5000: maps your local machine port 5000 to the container's port 5000
+iris-api: your Docker image name
+'''
 
 
 
