--- a/.md
+++ b/.md
@@ -15,23 +15,24 @@
 | ✅ Required for Docker later | You can export `requirements.txt` from it for Docker                    |
 | 🔁 Reproducible             | Easy to share project with others — they can recreate exact environment |
 
+``` bash 
 python -m venv venv
+```
 
 ### Activate venv 
-
- venv\Scripts\activate 
- 
+``` bash  
+venv\Scripts\activate
+ ``` 
 ### Install requirements
-
+``` bash 
 pip install -r requirements.txt
-
-
+ ```
 ### Test Your Flask API Locally
-
+``` bash
 python app.py
+```
 
 ----------
-
 ### Check if Docker Desktop is Installed
 ### Start Docker Desktop >> Open Docker Desktop
 ### Switch to Docker Linux Engine (if needed)
@@ -88,17 +89,17 @@ docker rmi iris-api             # Step 4: Delete image
 # After Built Docker image:
 ## Step 5: Run Docker Container Locally
 Run the Docker container and expose a port (e.g., 5000):
-''' bash
+``` bash
 docker run -d -p 5000:5000 iris-api
-'''
+```
 
-''' vbnet
+``` vbnet
 # Example: 
 This command:
 -d: runs in detached mode (in the background)
 -p 5000:5000: maps your local machine port 5000 to the container's port 5000
 iris-api: your Docker image name
-'''
+```
 
 
 
