--- a/.md
+++ b/.md
@@ -1,8 +1,8 @@
 # Train a model → Save it → Create API (Flask/FastAPI) → Host on AWS (EC2) with Docker
 
-# STEP 1: Train & Save Your ML Model in Google Colab >>  Download the model file
+## STEP 1: Train & Save Your ML Model in Google Colab >>  Download the model file
 
-# Setep 2: Create a Flask API in VS Code
+## Setep 2: Create a Flask API in VS Code
 
 
 ''' ## Create a Virtual Environment
