--- a/.md
+++ b/.md
@@ -101,6 +101,9 @@ This command:
 iris-api: your Docker image name
 ```
 
+# **✅ Docker is installed  >> ✅ Docker is running  >> ✅ Docker built the image successfully**
+
+
 
 
 
